<resources>
    <string name="app_name">Airpee&amp;pee</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="facebook_app_id">503131150189619</string>
    <string name="fb_login_protocol_scheme">fb503131150189619</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_search">Search</string>
    <string name="attributions">Attributions</string>
    <string name="formatted_place_data">
        Name: %1$s\nAddress: %2$s\nPhone: %3$s\nWebsite: %4$s\nRating: %5$s\nId: %6$s\n
    </string>
    <string name="request_direction">Request Direction</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add_private_toilet">Add private Toilet</string>
    <string name="Save">Save</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="opening_hours">Opening hours</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="signed_out">Singned out</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">verify email</string>
    <string name="loading">Loading</string>
    <string name="auth_failed">auth failed</string>

    <string name="ship_to_">

				Details :
			</string>
    <string name="far_far_awa">

				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up exlaborum incididunt quis nostrud exercitatn.
			</string>
    <string name="Toilet_name">
                Toiletten Am Volkspark
            </string>
    <string name="edit_profile">edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone</string>
    <string name="gender">gender</string>
    <string name="address">address</string>
    <string name="anbieter">Anbieter</string>
    <string name="search">Search</string>
    <string name="comment">Comment</string>
    <string name="more_info">More Info</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="fee">Fee</string>
    <string name="out_of_order">Out of Service</string>
    <string name="sauberkeit">Cleanliness</string>
    <string name="photo">Photo</string>

    //Settings
    <string name="title_activity_Settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_support">Support</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About Us</string>
    <string name="summary_about">We are a team of like-minded HTW computer engineering students, specialists in Android App Development and what you see now is
our successful semester project. We are Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any questions? We will be happy to help!</string>
    <string name="title_send_feedback">Contact Us</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_user">User</string>
    <string name="summary_userOff">Switch to Provider</string>
    <string name="summary_userOn">Switch to Client</string>

    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_edit_profile">key_edit_profile</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_user">User</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="add_image">add Image</string>
    <string name="toilet_type">toilet type</string>
    <string name="edit_toilet">Edit Toilet</string>
    <string name="add_toilet_review">Add Toilet Review</string>
    <string name="rating">Rating</string>
    <string name="todo">TODO</string>
    <string name="forget_your_password">Forget your Password ?</string>
    <string-array name="gender_array">
        <item>male</item>
        <item>female</item>
        <item>other</item>
    </string-array>
    <string-array name="rating_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
