<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@mipmap/ic_launcher_round" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textPersonName"
                tools:textSize="14sp" />

            <EditText
                android:id="@+id/edit_opening_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Opening Hours"
                android:inputType="textPersonName"
                tools:textSize="14sp" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:inputType="textPersonName"
                tools:textSize="14sp" />

            <TextView
                android:id="@+id/textView_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/comment"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />


            <TextView
                android:id="@+id/textView_more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/more_info"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/edit_wheelchair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wheelchair"
                tools:textSize="12sp" />

            <Switch
                android:id="@+id/add_ausser_betrieb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/out_of_order"
                tools:textSize="12sp" />

            <Switch
                android:id="@+id/edit_fee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fee"
                tools:textSize="12sp" />

            <EditText
                android:id="@+id/add_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cost"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/rating"
                android:textColor="@android:color/black"
                tools:textSize="12sp" />
            <Spinner
                android:id="@+id/spinner_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/photo"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:textColor="@color/colorAccent" />

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center|fill"
                android:layout_margin="5dp"
                android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>