<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddActivity"
    tools:showIn="@layout/activity_add">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <ScrollView
            android:id="@+id/add_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/add_toilet_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textAutoComplete"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <AutoCompleteTextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="textAutoComplete"
                         />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <AutoCompleteTextView
                        android:id="@+id/opening_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/opening_hours"
                        android:inputType="textAutoComplete" />
                </android.support.design.widget.TextInputLayout>

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="fee" />

                <Switch
                    android:id="@+id/switch2"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="isPrivate" />

                <Switch
                    android:id="@+id/switch3"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:text="wheelchair" />

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Search without google logo" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />




                <TextView
                    android:id="@+id/textViewPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="TextView" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="130dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center|fill"
                    android:layout_marginStart="119dp"
                    android:layout_marginBottom="102dp"
                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                    android:clickable="true"
                    app:srcCompat="@android:drawable/ic_menu_camera"
                    android:focusable="true" />

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>